[gd_scene load_steps=7 format=3 uid="uid://ctq6wx3rg6rfp"]

[ext_resource type="Script" path="res://pickups/Key/Key.gd" id="1_rxwuq"]
[ext_resource type="Texture2D" uid="uid://dv0tycbb5sega" path="res://assets/key.png" id="1_unmcl"]
[ext_resource type="AudioStream" uid="uid://f52hj4d35kc6" path="res://pickups/Key/Key.mp3" id="3_8eol6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2n5wx"]
atlas = ExtResource("1_unmcl")
region = Rect2(3, 0, 11, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ak0h5"]
animations = [{
"frames": [{
"duration": 0.01,
"texture": ExtResource("1_unmcl")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"pickup",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_unmcl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2n5wx")
}],
"loop": true,
"name": &"spin",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ne5ff"]
size = Vector2(9, 16)

[node name="Key" type="Area2D" groups=["Key"]]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_rxwuq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2.98023e-07, 0)
scale = Vector2(0.75, 1)
sprite_frames = SubResource("SpriteFrames_ak0h5")
animation = &"pickup"
autoplay = "spin"
frame = 1
frame_progress = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_ne5ff")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8eol6")
volume_db = -2.537

[connection signal="body_entered" from="." to="." method="_on_key_body_entered"]
[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="animation_looped" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_looped"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
